@@ -71,6 +71,8 @@ RELEASE 0.12 - XXX
 
   - Add SharedObject() support to the masm tool.
 
+  - Fix WhereIs() to return normalized paths.
+
 
 
 RELEASE 0.11 - Tue, 11 Feb 2003 05:24:33 -0600
